# codenlp-senor-python

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
src/codenlp_senor/core/: __init__.py
src/codenlp_senor/scripts/: python_dict.py  python_dict_insertion.py  python_dict_key_object.py  python_dict_order.py
